Fix map responsivenss - remove z-index in map css, but leave z-index in navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1343,5 +1343,5 @@ ul.social-icons li {
 
 /* # sourceMappingURL=maps/style.css.map */
 #map {
-  z-index: -1;
+  /* z-index: -1; */
 }
